--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
-version: '3.8'
-
 services:
-  # El contenedor de la Base de Datos
+
   db:
     image: postgres:15
     container_name: moss_db
@@ -15,13 +13,21 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
-  # Herramienta visual para ver la base de datos (Adminer)
   adminer:
     image: adminer
     container_name: moss_visualizer
     restart: always
     ports:
       - "8081:8080"
+
+  app:
+    build: .
+    container_name: moss_app
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
+    command: npm run dev
 
 volumes:
   db_data:
